feat(summary): enforce <=300 chars in logic and API; add prompt rule; add tests

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-political-columnist",
+  "name": "ai-news-columnist",
   "private": true,
   "version": "0.0.0",
   "type": "module",
